Comments added to LRU Cache code

--- a/LRU_Cache.ipynb
+++ b/LRU_Cache.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "The Least recently used node will be in the front, while the most recently used node will be at the end.\n",
+    "Datastructures used - Doubly Linked List, Dictionary\n",
+    "'''\n",
+    "\n",
+    "\n",
     "class Node:\n",
+    "     '''\n",
+    "     Initializing Node structure\n",
+    "     '''\n",
     "    def __init__(self,key, value):\n",
     "        self.key = key\n",
     "        self.value = value\n",
@@ -14,7 +23,9 @@
     "        self.next = None\n",
     "\n",
     "class LRUCache:\n",
-    "\n",
+    "     '''\n",
+    "     Initializing LRUCache\n",
+    "     '''\n",
     "    def __init__(self, capacity:int):\n",
     "           self.capacity = capacity\n",
     "           self.cache = {} \n",
@@ -23,12 +34,18 @@
     "           self.head.next = self.tail\n",
     "           self.tail.prev = self.head\n",
     "\n",
+    "     '''\n",
+    "     Function to remove node\n",
+    "     '''\n",
     "    def remove(self, node):\n",
     "         prev = node.prev \n",
     "         next = node.next\n",
     "         prev.next = next\n",
     "         next.prev = prev\n",
     "        \n",
+    "     '''\n",
+    "     Function to add node\n",
+    "     '''\n",
     "    def add(self, node):\n",
     "        prev = self.tail.prev\n",
     "        prev.next = node\n",
@@ -36,25 +53,31 @@
     "        node.next = self.tail\n",
     "        self.tail.prev = node\n",
     "    \n",
+    "    '''\n",
+    "    Function to fetch value corresponding to a Key\n",
+    "    '''\n",
     "    def get(self, key:int) -> int:\n",
-    "         if key in self.cache:\n",
+    "         if key in self.cache: # Check if key exists in cache\n",
     "              node = self.cache[key]\n",
-    "              self.remove(node)\n",
-    "              self.add(node)\n",
+    "              self.remove(node) # remove key \n",
+    "              self.add(node)    # add the key \n",
     "              return node.value\n",
     "         return -1\n",
     "    \n",
+    "    '''\n",
+    "    Funciton to update the value corresponding to a key\n",
+    "    '''\n",
     "    def put(self, key:int, value:int) -> None:\n",
-    "         if key in self.cache:\n",
-    "              node = self.cache[key]\n",
-    "              self.remove(node)\n",
-    "         node = Node(key, value)\n",
-    "         self.add(node)\n",
-    "         self.cache[key]= node\n",
-    "         if len(self.cache)>self.capacity:\n",
-    "              lru = self.head.next\n",
-    "              self.remove(lru)\n",
-    "              del self.cache[lru.key]"
+    "         if key in self.cache: # Check if key exists in cache\n",
+    "              node = self.cache[key] \n",
+    "              self.remove(node)    # Remove the key\n",
+    "         node = Node(key, value)   # Create new node with key, value \n",
+    "         self.add(node)  # add the new node\n",
+    "         self.cache[key]= node # update the cache key dictionary\n",
+    "         if len(self.cache)>self.capacity: #If after addition capcaity exceeds we need to remove from front\n",
+    "              lru = self.head.next # Fetch first node\n",
+    "              self.remove(lru) # Remove the first node\n",
+    "              del self.cache[lru.key] # remove the information of the deleted node from record"
    ]
   },
   {
